Fix image wrapping

--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ a {
 img {
   display: block;
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 80%;
 }
 
 span {
